--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2642,6 +2642,11 @@ input, select, textarea {
 		padding-top: 50px;
 	}
 
+	.gif-image {
+		max-width: 90%;
+		height: auto;
+	}
+
 	.image {
 		border: 0;
 		border-radius: 4px;
