--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -331,12 +331,7 @@ input, select, textarea {
 		color: #000000;
 	}
 
-	h1 {
-		color: #99ccff;
-		font-weight: 550;
-	}
-
-	h2, h3, h4, h5, h6 {
+	h1, h2, h3, h4, h5, h6 {
 		color: #FFD700;
 	}
 
